2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/NUnitAssemblyGroupFileFormat.cs,
	  Project/NUnitAssemblyGroupProject.cs, Project/TestAssembly.cs,
	  Services/NUnitOptions.cs, Services/UnitTest.cs: Moved serialization
	  engine to MonoDevelop.Core. Use new syntax for specifying attribute
	  scope.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Services/NUnitAssemblyTestSuite.cs: When counting test cases, ensure
	  the test suite is fully loaded. Fixes bug #400106.
	* Gui/TestResultsPad.cs: Some protection against division by 0.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml: Bump MD version.

2008-05-28  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/TestResultsPad.cs: Fix bug 387453 - Buttons in NUnit Test Results
	  throw exception.

2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 

	* Services/NUnitService.cs, Gui/TestPad.cs: Moved SearchTest to
	  NUnitService.
	* Gui/TestResultsPad.cs: Fixed bug 366047 - Exceptions in "Test
	  results" pad.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/NUnitAssemblyGroupFileFormat.cs: Track api changes.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/NUnitAssemblyGroupProject.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* md1format.xml: Added missing file.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml, MonoDevelop.NUnit.mdp,
	  Services/WorkspaceTestGroup.cs, Services/NUnitService.cs,
	  Services/UnitTest.cs, Services/SolutionFolderTestGroup.cs,
	  Services/UnitTestGroup.cs, Services/NUnitProjectTestSuite.cs,
	  Services/SystemTestProvider.cs, Services/ITestProvider.cs,